cmake_minimum_required(VERSION 3.24)
project(ASSGN4)

set(CMAKE_CXX_STANDARD 17)

add_executable(ASSGN4 main.cpp AVLNode.cpp AVLNode.h AVLTree.cpp AVLTree.h RedBlackTree.cpp RedBlackTree.h RBTNode.cpp RBTNode.h ReadFile.cpp ReadFile.h BinarySearchTree.cpp BinarySearchTree.h PrimaryNode.cpp PrimaryNode.h)
