cmake_minimum_required(VERSION 3.24)
project(ASSGN4)

set(CMAKE_CXX_STANDARD 17)

add_executable(ASSGN4 main.cpp AVLTree.cpp AVLTree.h RedBlackTree.cpp RedBlackTree.h BinarySearchTree.cpp BinarySearchTree.h PrimaryNode.cpp PrimaryNode.h Webstore.cpp Webstore.h SecondaryNode.cpp SecondaryNode.h ReadFile.cpp ReadFile.h)
